--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="hero">
     <div class="hero-content">
-        <h1>Business Sales Performance Analytics</h1>
+        <h1>Marketing Funnel & Conversion Performance Analysis</h1>
         <p>Data Analytics • Machine Learning • Power BI • Flask</p>
 
         <div class="hero-buttons">
